--- a/Tex/ProgrammingCode.tex
+++ b/Tex/ProgrammingCode.tex
@@ -18,7 +18,7 @@
 	\maketitle
 	
 
-	コードの書き方例
+	プログラミングコードの書き方例
 	\begin{lstlisting}[basicstyle=\ttfamily, frame=single,numbers=left]
 import numpy as np
 
