--- a/TeX/Figure_Table.tex
+++ b/TeX/Figure_Table.tex
@@ -2,12 +2,11 @@
 \usepackage[top=1truemm, bottom=13truemm, right=10truemm, left=10truemm]{geometry}
 \usepackage{wrapfig}
 \usepackage{url}
-\usepackage[dvipdfmx]{graphicx}
+\usepackage[dvipdfmx]{graphicx, color}
 \usepackage{comment}
 \usepackage{amsmath,amssymb}
 \usepackage{bm}
 \usepackage{here}
-%\usepackage{color}
 \usepackage{ascmac}
 \usepackage{fancybox}
 \usepackage{listings,jlisting}
@@ -19,52 +18,55 @@
 \date{}
 \maketitle
 
+\begin{equation}
+	a = x + 1
+\end{equation}
 図\ref{1}
 \begin{figure}[htbp]
-	\begin{center}
-		\begin{minipage}{0.48\hsize}
-			\begin{center}
-				\includegraphics[width=1.0 \textwidth]{figure1.png}
-			\end{center}
-			\begin{center}
-				fig. 1
-			\end{center}
-		\end{minipage}		
-		\hfil
-		\begin{minipage}{0.48\hsize}
-			\begin{center}
-				\includegraphics[width=1.0 \textwidth]{figure1.png}
-			\end{center}
-			\begin{center}
-				fig. 2 
-			\end{center}
-		\end{minipage}
-		\caption{Hoge}
-		\label{1}
-	\end{center}
+  \begin{center}
+    \begin{minipage}{0.48\hsize}
+      \begin{center}
+	\includegraphics[width=1.0 \textwidth]{figure1.png}
+      \end{center}
+      \begin{center}
+	fig. 1
+      \end{center}
+    \end{minipage}		
+    \hfil
+    \begin{minipage}{0.48\hsize}
+      \begin{center}
+	\includegraphics[width=1.0 \textwidth]{figure1.png}
+      \end{center}
+      \begin{center}
+	fig. 2 
+      \end{center}
+    \end{minipage}
+    \caption{Hoge}
+    \label{1}
+    \end{center}
 \end{figure}
 
 図\ref{2}
 \begin{figure}[H]
-	\begin{center}
-		\includegraphics[width=0.6 \textwidth]{figure1.png}
-		\vspace{-0.5cm}
-		\caption{Foo}
-		\label{2}
-	\end{center}
+  \begin{center}
+    \includegraphics[width=0.6 \textwidth]{figure1.png}
+    \vspace{-0.5cm}
+    \caption{Foo}
+    \label{2}
+  \end{center}
 \end{figure}
 
 表\ref{3}
 \begin{table}[htbp]
-	\centering
-	\caption{Bar}
-	\label{3}
-	\begin{tabular}{|c|c|} \hline
-			\multicolumn{2}{|c|}{hogehoge}\\ \hline
-		spam & spamspam \\ \hline
-		ham & hamham \\ \hline
-		egg & eggegg \\ \hline
-	\end{tabular}
+  \centering
+  \caption{Bar}
+  \label{3}
+  \begin{tabular}{|c|c|} \hline
+    \multicolumn{2}{|c|}{hogehoge}\\ \hline
+    spam & spamspam \\ \hline
+    ham & hamham \\ \hline
+    egg & eggegg \\ \hline
+  \end{tabular}
 \end{table}
 
 \end{document}
